tests/fail/missing_exit.avm
push int16(1)
push int32(42)
mul
hdump
; missing exit here
